--- a/app/src/main/res/layout/item_project.xml
+++ b/app/src/main/res/layout/item_project.xml
@@ -27,6 +27,7 @@
         android:orientation="vertical">
 
         <TextView
+            android:id="@+id/txtName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Sri Lankan Leopard"
@@ -35,6 +36,7 @@
             android:textSize="18sp"/>
 
         <TextView
+            android:id="@+id/txtOrgName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Organization's name"
@@ -43,6 +45,7 @@
             android:textSize="15sp"/>
 
         <TextView
+            android:id="@+id/txtPercentage"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="76%"
