--- a/app/src/main/res/layout/activity_user_donate.xml
+++ b/app/src/main/res/layout/activity_user_donate.xml
@@ -58,7 +58,8 @@
                 <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="200dp"
-                    android:scaleType="centerCrop" />
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/card_image"/>
 
             </androidx.cardview.widget.CardView>
 
@@ -72,6 +73,7 @@
                 android:paddingBottom="20dp">
 
                 <EditText
+                    android:id="@+id/full_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/sf_pro_bold"
@@ -83,6 +85,7 @@
                     android:layout_marginBottom="10dp"/>
 
                 <EditText
+                    android:id="@+id/email"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/sf_pro_bold"
@@ -94,6 +97,7 @@
                     android:layout_marginBottom="10dp"/>
 
                 <EditText
+                    android:id="@+id/name_on_card"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/sf_pro_bold"
@@ -105,6 +109,7 @@
                     android:layout_marginBottom="10dp"/>
 
                 <EditText
+                    android:id="@+id/address"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/sf_pro_bold"
@@ -116,6 +121,7 @@
                     android:layout_marginBottom="10dp"/>
 
                 <EditText
+                    android:id="@+id/card_number"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/sf_pro_bold"
@@ -134,6 +140,7 @@
                     android:layout_marginBottom="10dp">
 
                     <EditText
+                        android:id="@+id/city"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginRight="15dp"
@@ -146,6 +153,7 @@
                         android:textSize="15sp" />
 
                     <EditText
+                        android:id="@+id/exp_month"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="15dp"
@@ -163,10 +171,46 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
+                    android:weightSum="2"
+                    android:layout_marginBottom="10dp">
+
+                    <EditText
+                        android:id="@+id/project_id"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="15dp"
+                        android:layout_weight="1"
+                        android:fontFamily="@font/sf_pro_bold"
+                        android:hint="Project ID"
+                        android:inputType="text"
+                        android:textColor="@color/grey2"
+                        android:textColorHint="@color/grey2"
+                        android:textSize="15sp" />
+
+                    <EditText
+                        android:id="@+id/donor_id"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="15dp"
+                        android:layout_weight="1"
+                        android:fontFamily="@font/sf_pro_bold"
+                        android:hint="Donor ID"
+                        android:inputType="text"
+                        android:textColor="@color/grey2"
+                        android:textColorHint="@color/grey2"
+                        android:textSize="15sp" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
                     android:weightSum="4"
                     android:layout_marginBottom="10dp">
 
                     <EditText
+                        android:id="@+id/state"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginRight="5dp"
@@ -179,6 +223,7 @@
                         android:textSize="15sp" />
 
                     <EditText
+                        android:id="@+id/zip_code"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="5dp"
@@ -192,6 +237,7 @@
                         android:textSize="15sp" />
 
                     <EditText
+                        android:id="@+id/exp_year"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="5dp"
@@ -205,6 +251,7 @@
                         android:textSize="15sp" />
 
                     <EditText
+                        android:id="@+id/cvv"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="5dp"
