--- a/app/src/main/res/layout/activity_user_donate.xml
+++ b/app/src/main/res/layout/activity_user_donate.xml
@@ -58,8 +58,7 @@
                 <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="200dp"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/card_image"/>
+                    android:scaleType="centerCrop"/>
 
             </androidx.cardview.widget.CardView>
 
