--- a/app/src/main/res/layout/activity_user_project.xml
+++ b/app/src/main/res/layout/activity_user_project.xml
@@ -69,6 +69,7 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/txtProjectName"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Sri Lankan Leopard"
@@ -77,6 +78,7 @@
                     android:textSize="22sp"/>
 
                 <TextView
+                    android:id="@+id/txtProjectOrgName"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Organization's name"
@@ -85,6 +87,7 @@
                     android:textSize="15sp"/>
 
                 <TextView
+                    android:id="@+id/txtProjectPercentage"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="76%"
@@ -146,6 +149,7 @@
                             android:background="@drawable/button_white"
                             android:fontFamily="@font/sf_pro_bold"
                             android:text="Donate"
+                            android:onClick="goToDonate"
                             android:textAllCaps="false"
                             android:textColor="@color/white"
                             android:textSize="15sp"
