--- a/app/src/main/res/layout/activity_user_donate.xml
+++ b/app/src/main/res/layout/activity_user_donate.xml
@@ -45,23 +45,6 @@
             android:orientation="vertical"
             android:paddingBottom="20dp">
 
-            <androidx.cardview.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="15dp"
-                android:layout_marginRight="15dp"
-                android:orientation="vertical"
-                app:cardBackgroundColor="@color/grey2"
-                app:cardCornerRadius="20dp"
-                app:cardElevation="50dp">
-
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="200dp"
-                    android:scaleType="centerCrop"/>
-
-            </androidx.cardview.widget.CardView>
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -100,8 +83,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/sf_pro_bold"
-                    android:hint="Name on Card"
-                    android:inputType="text"
+                    android:hint="Amount"
+                    android:inputType="number"
                     android:textColor="@color/grey2"
                     android:textColorHint="@color/grey2"
                     android:textSize="15sp"
@@ -274,13 +257,14 @@
                     android:textColor="@color/grey2"/>
 
                 <Button
+                    android:onClick="makeADonation"
                     android:id="@+id/User_Payments"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="30dp"
                     android:background="@drawable/button_white"
                     android:fontFamily="@font/sf_pro_bold"
-                    android:text="Continue to Checkout"
+                    android:text="Make Donation"
                     android:textAllCaps="false"
                     android:textColor="@color/white"
                     android:textSize="17sp" />
