--- a/app/src/main/res/drawable/button_with_border.xml
+++ b/app/src/main/res/drawable/button_with_border.xml
@@ -3,10 +3,14 @@
     android:shape="rectangle">
 
     <solid
-        android:color="@color/white"
+        android:color="@color/primary_color"
         />
 
     <corners
-        android:radius="30dp"
+        android:radius="10dp"
         />
+
+    <stroke
+        android:width="5dp"
+        android:color="@color/low_opacity_primary"/>
 </shape>
