--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/splash"
     tools:context=".MainActivity">
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:src="@drawable/get_started_bg_img"
+        android:scaleType="centerCrop"
+        android:contentDescription="get_started_bg_img"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -14,39 +19,56 @@
         android:gravity="center"
         android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="60dp">
+        android:layout_marginBottom="50dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Raise."
+                android:textSize="40sp"
+                android:fontFamily="@font/sf_pro_bold"
+                android:textColor="@color/white"
+                android:gravity="center" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Hands"
+                android:textSize="40sp"
+                android:fontFamily="@font/sf_pro_bold"
+                android:textColor="@color/primary_color"
+                android:gravity="center" />
+
+        </LinearLayout>
 
         <TextView
-            android:id="@+id/textView10"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Raise"
-            android:textSize="40sp"
-            android:fontFamily="@font/sf_pro_bold"
-            android:textColor="@color/white"
-            android:gravity="center_horizontal" />
-        <TextView
-            android:id="@+id/textView11"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Hands"
-            android:textSize="70sp"
-            android:fontFamily="@font/sf_pro_black"
-            android:textColor="@color/white"
-            android:layout_marginTop="-35dp"
-            android:gravity="center_horizontal" />
-        <TextView
-            android:id="@+id/no_id"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="For a better and\n more beautiful world..."
+            android:text="For a better and more\n beautiful world..."
             android:textSize="20sp"
-            android:fontFamily="@font/sf_pro_regular"
+            android:fontFamily="@font/sf_pro_medium"
+            android:textColor="@color/paragraph_color"
+            android:gravity="center"
+            android:layout_marginVertical="10dp"/>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/button_with_border"
+            android:fontFamily="@font/sf_pro_bold"
+            android:text="Get Started"
+            android:textAllCaps="false"
             android:textColor="@color/white"
-            android:layout_marginRight="20dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="-20dp"
-            android:gravity="center"/>
+            android:textSize="20sp"
+            android:paddingVertical="15dp"
+            android:paddingHorizontal="50dp"
+            android:layout_marginTop="10dp"/>
 
     </LinearLayout>
 
