--- a/app/src/main/res/layout/activity_user_donate.xml
+++ b/app/src/main/res/layout/activity_user_donate.xml
@@ -262,7 +262,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="30dp"
-                    android:background="@drawable/button_white"
+                    android:background="@drawable/button_with_border"
                     android:fontFamily="@font/sf_pro_bold"
                     android:text="Make Donation"
                     android:textAllCaps="false"
