--- a/app/src/main/res/layout/activity_user_login.xml
+++ b/app/src/main/res/layout/activity_user_login.xml
@@ -114,7 +114,7 @@
             android:layout_marginLeft="50dp"
             android:layout_marginRight="50dp"
             android:layout_marginBottom="35dp"
-            android:background="@drawable/button_white"
+            android:background="@drawable/button_with_border"
             android:fontFamily="@font/sf_pro_bold"
             android:text="Sign In"
             android:textAllCaps="false"
